--- a/tutorials/Tutorial1_GLD_hospital.ipynb
+++ b/tutorials/Tutorial1_GLD_hospital.ipynb
@@ -106,12 +106,10 @@
     }
    ],
    "source": [
-    "# preprocess: if set to true, it will drop empty columns\n",
-    "# [ !!! ] parameters are effective only when preprocess set to TRUE:\n",
     "# dropna: if set to true, it will drop any tuple with null values\n",
     "# dropcol: drop columns by list of column names\n",
     "pf.load_data(input_type='file', path=data_path, use_embedding=False,\n",
-    "             preprocess=True, dropna=False, dropcol=['Address3'])"
+    "             dropna=False, dropcol=['Address3'])"
    ]
   },
   {
