fix relative path; use precision matrix instead of covariance

--- a/tutorials/Tutorial1_GLD_hospital.ipynb
+++ b/tutorials/Tutorial1_GLD_hospital.ipynb
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from profiler.profiler import Profiler\n",
+    "from profiler.core import Profiler\n",
     "from profiler.detector.helper import process_heatmap\n",
     "import datetime\n",
     "import os"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[2.86102294922e-06] START\n",
+      "INFO:profiler.utility:[3.5762786865234375e-06] START\n",
       "\n"
      ]
     }
@@ -368,21 +368,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
