--- a/tutorials/Tutorial2_GLD_hospita_advanced.ipynb
+++ b/tutorials/Tutorial2_GLD_hospita_advanced.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from profiler.profiler import Profiler\n",
+    "from profiler.core import Profiler\n",
     "from profiler.detector.helper import process_heatmap\n",
     "import datetime\n",
     "import os"
@@ -506,21 +506,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
