--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -210,7 +210,57 @@
     }
    ],
    "source": [
-    "vars(s)"
+    "vars(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "left = np.array([[1,2,3],[1,-1,2]])\n",
+    "right = np.array([[1,2,3],[2,-2,4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1.])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(left * right, axis=1) / (np.sqrt(np.sum(np.square(left), axis=1)) * np.sqrt(np.sum(np.square(right), axis=1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14., 12.])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(np.sum(np.square(left), axis=1)) * np.sqrt(np.sum(np.square(right), axis=1))"
    ]
   },
   {
