fixed err in embedding

--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -166,11 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = pf.session.struct_engine"
+    "s = pf.session.struct_engine\n",
+    "inv_cov = s.inv_cov"
    ]
   },
   {
@@ -415,30 +416,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = 39"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def union_and_check_cycle(sets):\n",
+    "    # TODO\n",
     "    for s in sets:\n",
     "        for edge in s:\n",
-    "            "
+    "            pass"
    ]
   },
   {
@@ -457,6 +443,11 @@
    ],
    "source": [
     "from profiler.utility import find_all_subsets\n",
+    "def score(j, S):\n",
+    "    xs = inv_cov.loc[S, :]\n",
+    "    xj = inv_cov.loc[j, :]\n",
+    "    \n",
+    "    \n",
     "def dfs(G, tree, t):\n",
     "    # R(a,p,s): a - parent sets; p: directed path, s:score\n",
     "    if tree.node_types[t] == JOIN:\n",
@@ -496,7 +487,8 @@
     "            a[v] = aa[v]\n",
     "        # (2) p\n",
     "        p = union_and_check([(u, v) for (u, v) in pp if u in Xt and v in Xt])\n",
-    "        # (3) add score of given parent set of v0 in t' and v0\n",
+    "        # (3) add score of given parent set of v0 in t'\n",
+    "        # TODO: scoring function\n",
     "        s = ss + score(v0, aa[v0])\n",
     "    else:\n",
     "        # leaf \n",
@@ -505,15 +497,7 @@
     "        # TODO\n",
     "        p = set([])\n",
     "        R[t] = (a, p, s)\n",
-    "    return R[t]\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "                \n",
-    "                \n",
-    "            \n"
+    "    return R[t]"
    ]
   },
   {
