update notebook to show inv_cov

--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -422,6 +422,7 @@
    "source": [
     "def union_and_check_cycle(sets):\n",
     "    # TODO\n",
+    "    # start from top levels (needs in_degree), visit all the children, make sure it is not in the parent set\n",
     "    for s in sets:\n",
     "        for edge in s:\n",
     "            pass"
@@ -429,24 +430,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-35-adceefd43ab4>, line 48)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-adceefd43ab4>\"\u001b[0;36m, line \u001b[0;32m48\u001b[0m\n\u001b[0;31m    return R[t]\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from profiler.utility import find_all_subsets\n",
     "def score(j, S):\n",
     "    xs = inv_cov.loc[S, :]\n",
     "    xj = inv_cov.loc[j, :]\n",
-    "    \n",
+    "    bj = np.linalg.inv(xs.transpose()*xs)*xs.transpose()*xj\n",
+    "    score = np.sum(np.square(xj-xs*bj))/float(inv_cov.shape[0])/s.param['sigma']\n",
+    "    return score\n",
     "    \n",
     "def dfs(G, tree, t):\n",
     "    # R(a,p,s): a - parent sets; p: directed path, s:score\n",
@@ -488,7 +482,6 @@
     "        # (2) p\n",
     "        p = union_and_check([(u, v) for (u, v) in pp if u in Xt and v in Xt])\n",
     "        # (3) add score of given parent set of v0 in t'\n",
-    "        # TODO: scoring function\n",
     "        s = ss + score(v0, aa[v0])\n",
     "    else:\n",
     "        # leaf \n",
@@ -517,65 +510,7 @@
     }
    ],
    "source": [
-    "memorize_dfs(NTD.root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "NTD.root"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = pd.DataFrame(data=[{'a':1,'b':2,'c':3}, {'a':2,'b':2,'c':3}])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = pd.DataFrame(data=[{'a':1,'b':2,'d':3}, {'a':2,'b':2,'d':2,'c':3}])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(NTD.idx_to_name[47] - NTD.idx_to_name[48])[0]"
+    "R = dfs(NTD.root)"
    ]
   },
   {
