fixed dynamic programming

--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.009006261825561523] Load Data start\n",
+      "INFO:profiler.utility:[0.9691591262817383] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:inferred types of attributes: {\n",
       "    \"airlineid\": \"text\",\n",
@@ -105,7 +105,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'airlineid': ['equal'], 'sairportid': ['equal'], 'dairportid': ['equal'], 'codeshare': ['equal'], 'eq1': ['equal'], 'eq2': ['equal'], 'eq3': ['equal'], 'eq4': ['equal'], 'eq5': ['equal'], 'eq8': ['equal'], 'eq12': ['equal'], 'eq14': ['equal'], 'eq15': ['equal'], 'eq17': ['equal'], 'eq19': ['equal'], 'eq20': ['equal'], 'eq22': ['equal'], 'eq25': ['equal'], 'eq28': ['equal'], 'eq30': ['equal'], 'eq31': ['equal'], 'eq45': ['equal'], 'eq46': ['equal'], 'eq71': ['equal'], 'name1': ['equal', 'greater_than', 'less_than'], 'name2': ['equal'], 'name4': ['equal'], 'acountry': ['equal'], 'active': ['equal'], 'scity': ['equal'], 'scountry': ['equal'], 'slatitude': ['equal', 'greater_than', 'less_than'], 'slongitude': ['equal', 'greater_than', 'less_than'], 'stimezone': ['equal', 'greater_than', 'less_than'], 'sdst': ['equal'], 'dcity': ['equal'], 'dcountry': ['equal'], 'dlatitude': ['equal', 'greater_than', 'less_than'], 'dlongitude': ['equal', 'greater_than', 'less_than'], 'dtimezone': ['equal', 'greater_than', 'less_than'], 'ddst': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[1.8395321369171143] Load Data execution time: 1.8305258750915527\n",
+      "INFO:profiler.utility:[2.8786749839782715] Load Data execution time: 1.9095158576965332\n",
       "\n"
      ]
     }
@@ -146,15 +146,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[1.8592619895935059] Create Training Data start\n",
+      "INFO:profiler.utility:[7.310988187789917] Create Training Data start\n",
       "\n",
-      "INFO:profiler.utility:[18.198583126068115] Create Training Data execution time: 16.33932113647461\n",
+      "INFO:profiler.utility:[22.573662996292114] Create Training Data execution time: 15.262674808502197\n",
       "\n",
-      "INFO:profiler.utility:[18.199498176574707] Recover Moral Graph start\n",
+      "INFO:profiler.utility:[22.574697971343994] Recover Moral Graph start\n",
       "\n",
       "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/sklearn/covariance/graph_lasso_.py:265: ConvergenceWarning: graphical_lasso: did not converge after 300 iteration: dual gap: 1.111e-03\n",
       "  % (max_iter, d_gap), ConvergenceWarning)\n",
-      "INFO:profiler.utility:[23.95898127555847] Recover Moral Graph execution time: 5.759483098983765\n",
+      "INFO:profiler.utility:[28.068791151046753] Recover Moral Graph execution time: 5.494093179702759\n",
       "\n"
      ]
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.graph.Graph at 0x121e934a8>"
+       "<networkx.classes.graph.Graph at 0x1291c91d0>"
       ]
      },
      "execution_count": 9,
@@ -253,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.graph.Graph at 0x11ec03c88>"
+       "<networkx.classes.graph.Graph at 0x128a143c8>"
       ]
      },
      "execution_count": 13,
@@ -312,7 +312,7 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.digraph.DiGraph at 0x11ec1d400>"
+       "<networkx.classes.digraph.DiGraph at 0x12f8caf98>"
       ]
      },
      "execution_count": 15,
@@ -406,12 +406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dynamic programming\n",
     "leaves = NTD.out_degrees.index.values[NTD.out_degrees['degree'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from profiler.utility import find_all_subsets"
    ]
   },
   {
@@ -422,9 +431,10 @@
    "source": [
     "def union_and_check_cycle(sets):\n",
     "    # TODO\n",
-    "    # start from top levels (needs in_degree), visit all the children, make sure it is not in the parent set\n",
-    "    for s in sets:\n",
-    "        for edge in s:\n",
+    "    s0 = sets[0]\n",
+    "    for s in sets[1:]:\n",
+    "        for (u,v) in s:\n",
+    "            # transitive closure\n",
     "            pass"
    ]
   },
@@ -434,63 +444,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from profiler.utility import find_all_subsets\n",
     "def score(j, S):\n",
     "    xs = inv_cov.loc[S, :]\n",
     "    xj = inv_cov.loc[j, :]\n",
     "    bj = np.linalg.inv(xs.transpose()*xs)*xs.transpose()*xj\n",
     "    score = np.sum(np.square(xj-xs*bj))/float(inv_cov.shape[0])/s.param['sigma']\n",
     "    return score\n",
+    "\n",
+    "def is_eq_dict(dic1, dic2):\n",
+    "    # TODO\n",
+    "    if len(dic1.keys()) != len(dic2.keys()):\n",
+    "        return False\n",
+    "    for k1 in dic1:\n",
+    "        if k1 not in dic2:\n",
+    "            return False\n",
+    "        if dic1[k1] != dic2[k2]:\n",
+    "            return False\n",
+    "    return True\n",
     "    \n",
     "def dfs(G, tree, t):\n",
     "    # R(a,p,s): a - parent sets; p: directed path, s:score\n",
     "    if tree.node_types[t] == JOIN:\n",
+    "        candidates = {}\n",
     "        # has children t1 and t2\n",
-    "        left, right = tree.get_children(t)\n",
-    "        la, lp, ls = dfs(G, tree, left)\n",
-    "        ra, rp, rs = dfs(G, tree, right)\n",
-    "        a = aa\n",
-    "        p = union_and_check_cycle([lp, rp])\n",
-    "        # TODO check cycle\n",
-    "        s = ls + rs\n",
-    "        R[t] = (a, p, s)\n",
+    "        t1, t2 = tree.get_children(t)\n",
+    "        for (a1, p1, s1) in dfs(G, tree, t1):\n",
+    "            for (a2, p2, s2) in dfs(G, tree, t2):\n",
+    "                if not is_eq_dict(a1, a2):\n",
+    "                    continue\n",
+    "                a = a1\n",
+    "                p = union_and_check_cycle([p1, p2])\n",
+    "                if p is None:\n",
+    "                    continue\n",
+    "                s = s1 + s2\n",
+    "                if s not in candidates:\n",
+    "                    candidates[s] = []\n",
+    "                candidates[s].append((a, p, s))\n",
+    "        Rt = candidates[min(list(candidates.keys()))]\n",
+    "        return Rt\n",
     "    elif tree.node_types[t] == INTRO:\n",
+    "        # has only one child\n",
     "        child = tree.get_children(t)[0]\n",
-    "        aa, pp, ss = dfs(G, tree, child)\n",
     "        Xt = tree.idx_to_name[t]\n",
     "        Xtc = tree.idx_to_name[child]\n",
     "        v0 = list(Xt - tree.idx_to_name[child])[0]\n",
-    "        # TODO: check why subset, optional due to acyclic contraint? \n",
-    "        P = set(G.get_neighbors(v0)).intersection(Xt)\n",
-    "        a = {}\n",
-    "        # (2) a(v) = a(v') for v in X(t')\n",
-    "        for v in Xtc:\n",
-    "            a[v] = aa[v]\n",
-    "        # (3) p: transitive closure\n",
-    "        # (4) check cycles\n",
-    "        p = union_and_check_cycles([pp, [(u,v0) for u in P], [(v0, u) for u in Xtc for v0 in aa[u]]])\n",
-    "        s = ss\n",
-    "        R[t] = (a, p, s)\n",
+    "        Rt = []\n",
+    "        for P in find_all_subsets(set(G.get_neighbors(v0))):\n",
+    "            for (aa, pp, ss) in dfs(G, tree, child):\n",
+    "                a = {}\n",
+    "                a[v0] = P\n",
+    "                for v in Xtc:\n",
+    "                    a[v] = aa[v]\n",
+    "                p = union_and_check_cycle([pp, [(u, v0) for u in P], [(vv, u) for u in Xtc for vv in aa[u]]])\n",
+    "                if p is None:\n",
+    "                    continue\n",
+    "                s = ss\n",
+    "                # since score does not change, all should have same score\n",
+    "                Rt.append(s)\n",
     "    elif tree.node_types[t] == FORGET:\n",
+    "        # has only one child\n",
     "        child = tree.get_children(t)[0]\n",
-    "        aa, pp, ss = dfs(G, tree, child)\n",
     "        Xt = tree.idx_to_name[t]\n",
-    "        v0 = list(Xt - tree.idx_to_name[child])[0]\n",
-    "        # (1) a(v) = a(v') for v in X(t)\n",
-    "        for v in Xt:\n",
-    "            a[v] = aa[v]\n",
-    "        # (2) p\n",
-    "        p = union_and_check([(u, v) for (u, v) in pp if u in Xt and v in Xt])\n",
-    "        # (3) add score of given parent set of v0 in t'\n",
-    "        s = ss + score(v0, aa[v0])\n",
+    "        v0 = list(tree.idx_to_name[child] - Xt)[0]\n",
+    "        candidates = {}\n",
+    "        for (aa, pp, ss) in dfs(G, tree, child):\n",
+    "            a = {}\n",
+    "            for v in Xt:\n",
+    "                a[v] = aa[v]\n",
+    "            p = [(u,v) for (u,v) in pp if u in Xt and v in Xt]\n",
+    "            if p is None:\n",
+    "                continue\n",
+    "            s = ss + score(v0, aa[v0])\n",
+    "            if s not in candidates:\n",
+    "                candidates[s] = []\n",
+    "            candidates[s].append((a, p, s))\n",
+    "        Rt = candidates[min(list(candidates.keys()))]\n",
     "    else:\n",
-    "        # leaf \n",
-    "        a = {}\n",
-    "        s = 0\n",
-    "        # TODO\n",
-    "        p = set([])\n",
-    "        R[t] = (a, p, s)\n",
-    "    return R[t]"
+    "        # leaf\n",
+    "        min_score = 100000\n",
+    "        # 1. P is a subset of all the neighbors of the vertex in leaf \n",
+    "        candidates = {}\n",
+    "        Xt = tree.idx_to_name[t]\n",
+    "        v = list(Xt)[0]\n",
+    "        for P in find_all_subsets(set(G.get_neighbors(v))):\n",
+    "            a = {v: P}\n",
+    "            s = score(list(Xt)[0], P)\n",
+    "            p = [(p,v) for p in P]\n",
+    "            if s not in candidates:\n",
+    "                candidates[s] = []\n",
+    "            candidates[s].append((a, p, s))\n",
+    "        # get minimal-score records\n",
+    "        Rt = candidates[min(list(candidates.keys()))]\n",
+    "    return Rt"
    ]
   },
   {
