complete 1st iter

--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.9691591262817383] Load Data start\n",
+      "INFO:profiler.utility:[0.007089853286743164] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:inferred types of attributes: {\n",
       "    \"airlineid\": \"text\",\n",
@@ -105,7 +105,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'airlineid': ['equal'], 'sairportid': ['equal'], 'dairportid': ['equal'], 'codeshare': ['equal'], 'eq1': ['equal'], 'eq2': ['equal'], 'eq3': ['equal'], 'eq4': ['equal'], 'eq5': ['equal'], 'eq8': ['equal'], 'eq12': ['equal'], 'eq14': ['equal'], 'eq15': ['equal'], 'eq17': ['equal'], 'eq19': ['equal'], 'eq20': ['equal'], 'eq22': ['equal'], 'eq25': ['equal'], 'eq28': ['equal'], 'eq30': ['equal'], 'eq31': ['equal'], 'eq45': ['equal'], 'eq46': ['equal'], 'eq71': ['equal'], 'name1': ['equal', 'greater_than', 'less_than'], 'name2': ['equal'], 'name4': ['equal'], 'acountry': ['equal'], 'active': ['equal'], 'scity': ['equal'], 'scountry': ['equal'], 'slatitude': ['equal', 'greater_than', 'less_than'], 'slongitude': ['equal', 'greater_than', 'less_than'], 'stimezone': ['equal', 'greater_than', 'less_than'], 'sdst': ['equal'], 'dcity': ['equal'], 'dcountry': ['equal'], 'dlatitude': ['equal', 'greater_than', 'less_than'], 'dlongitude': ['equal', 'greater_than', 'less_than'], 'dtimezone': ['equal', 'greater_than', 'less_than'], 'ddst': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[2.8786749839782715] Load Data execution time: 1.9095158576965332\n",
+      "INFO:profiler.utility:[1.8794670104980469] Load Data execution time: 1.8723771572113037\n",
       "\n"
      ]
     }
@@ -146,15 +146,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[7.310988187789917] Create Training Data start\n",
+      "INFO:profiler.utility:[1.8996648788452148] Create Training Data start\n",
       "\n",
-      "INFO:profiler.utility:[22.573662996292114] Create Training Data execution time: 15.262674808502197\n",
+      "INFO:profiler.utility:[16.700468063354492] Create Training Data execution time: 14.800803184509277\n",
       "\n",
-      "INFO:profiler.utility:[22.574697971343994] Recover Moral Graph start\n",
+      "INFO:profiler.utility:[16.70141911506653] Recover Moral Graph start\n",
       "\n",
       "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/sklearn/covariance/graph_lasso_.py:265: ConvergenceWarning: graphical_lasso: did not converge after 300 iteration: dual gap: 1.111e-03\n",
       "  % (max_iter, d_gap), ConvergenceWarning)\n",
-      "INFO:profiler.utility:[28.068791151046753] Recover Moral Graph execution time: 5.494093179702759\n",
+      "INFO:profiler.utility:[21.96883511543274] Recover Moral Graph execution time: 5.267416000366211\n",
       "\n"
      ]
     }
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.graph.Graph at 0x1291c91d0>"
+       "<networkx.classes.graph.Graph at 0x11cd1bcc0>"
       ]
      },
      "execution_count": 9,
@@ -253,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.graph.Graph at 0x128a143c8>"
+       "<networkx.classes.graph.Graph at 0x12182e278>"
       ]
      },
      "execution_count": 13,
@@ -312,7 +312,7 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.digraph.DiGraph at 0x12f8caf98>"
+       "<networkx.classes.digraph.DiGraph at 0x126ce7b00>"
       ]
      },
      "execution_count": 15,
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,28 +425,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def union_and_check_cycle(sets):\n",
-    "    # TODO\n",
     "    s0 = sets[0]\n",
+    "    # each set is a dictionary with left: [all rights] s.t. there is a directed edge from left to right\n",
     "    for s in sets[1:]:\n",
-    "        for (u,v) in s:\n",
-    "            # transitive closure\n",
-    "            pass"
+    "        for (l, rights) in s.items():\n",
+    "            for r in rights:\n",
+    "                # try to add (l,r) to s0\n",
+    "                # if (r,l) in s0 as well, has a cycle\n",
+    "                if l in s0[r]:\n",
+    "                    return None\n",
+    "                if r in s0[l]:\n",
+    "                    # path already exists\n",
+    "                    continue\n",
+    "                # else, add the edge\n",
+    "                s0[l].append(r)\n",
+    "                # add transitive closure\n",
+    "                # everything pointing to l now, should also points to r\n",
+    "                for ll in s0:\n",
+    "                    if ll == l or ll == r:\n",
+    "                        continue\n",
+    "                    if l in s0[ll] and r not in s0[ll]:\n",
+    "                        if ll in s0[r]:\n",
+    "                            # cycle\n",
+    "                            return None\n",
+    "                        s0[ll].append(r)\n",
+    "    return s0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pf.session.training_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def score(j, S):\n",
-    "    xs = inv_cov.loc[S, :]\n",
-    "    xj = inv_cov.loc[j, :]\n",
+    "    S = list(S)\n",
+    "    print(S)\n",
+    "    print(j)\n",
+    "    xs = X.iloc[:, S]\n",
+    "    xj = X.iloc[:, j]\n",
     "    bj = np.linalg.inv(xs.transpose()*xs)*xs.transpose()*xj\n",
     "    score = np.sum(np.square(xj-xs*bj))/float(inv_cov.shape[0])/s.param['sigma']\n",
     "    return score\n",
@@ -491,11 +522,22 @@
     "        Rt = []\n",
     "        for P in find_all_subsets(set(G.get_neighbors(v0))):\n",
     "            for (aa, pp, ss) in dfs(G, tree, child):\n",
+    "                # parent sets\n",
     "                a = {}\n",
     "                a[v0] = P\n",
     "                for v in Xtc:\n",
     "                    a[v] = aa[v]\n",
-    "                p = union_and_check_cycle([pp, [(u, v0) for u in P], [(vv, u) for u in Xtc for vv in aa[u]]])\n",
+    "                # directed path\n",
+    "                p1 = {}\n",
+    "                for u in P:\n",
+    "                    p1[u] = [v0]\n",
+    "                p2 = {}\n",
+    "                for u in Xtc:\n",
+    "                    for vv in aa[u]:\n",
+    "                        if vv not in p2:\n",
+    "                            p2[vv] = []\n",
+    "                        p2[vv].append(u)\n",
+    "                p = union_and_check_cycle([pp, p1, p2])\n",
     "                if p is None:\n",
     "                    continue\n",
     "                s = ss\n",
@@ -511,9 +553,11 @@
     "            a = {}\n",
     "            for v in Xt:\n",
     "                a[v] = aa[v]\n",
-    "            p = [(u,v) for (u,v) in pp if u in Xt and v in Xt]\n",
-    "            if p is None:\n",
-    "                continue\n",
+    "            p = {}\n",
+    "            for u in pp:\n",
+    "                if u not in Xt:\n",
+    "                    continue\n",
+    "                p[u] = [v for v in pp[u] if v in Xt]\n",
     "            s = ss + score(v0, aa[v0])\n",
     "            if s not in candidates:\n",
     "                candidates[s] = []\n",
@@ -526,10 +570,13 @@
     "        candidates = {}\n",
     "        Xt = tree.idx_to_name[t]\n",
     "        v = list(Xt)[0]\n",
+    "        print(set(G.get_neighbors(v)))\n",
     "        for P in find_all_subsets(set(G.get_neighbors(v))):\n",
     "            a = {v: P}\n",
     "            s = score(list(Xt)[0], P)\n",
-    "            p = [(p,v) for p in P]\n",
+    "            p = {}\n",
+    "            for p in P:\n",
+    "                p[p] = [v]\n",
     "            if s not in candidates:\n",
     "                candidates[s] = []\n",
     "            candidates[s].append((a, p, s))\n",
@@ -540,22 +587,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "frozenset({34})"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{34, 9, 12, 13, 16, 19}\n",
+      "[34]\n",
+      "22\n"
+     ]
     }
    ],
    "source": [
-    "R = dfs(NTD.root)"
+    "R = dfs(G, NTD, NTD.root)"
    ]
   },
   {
