--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.006877899169921875] Load Data start\n",
+      "INFO:profiler.utility:[0.007055044174194336] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:inferred types of attributes: {\n",
       "    \"ProviderNumber\": \"text\",\n",
@@ -53,7 +53,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'ProviderNumber': ['equal'], 'HospitalName': ['equal'], 'Address1': ['equal'], 'Address2': ['equal'], 'Address3': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZipCode': ['equal'], 'CountyName': ['equal'], 'PhoneNumber': ['equal'], 'HospitalType': ['equal'], 'HospitalOwner': ['equal'], 'EmergencyService': ['equal'], 'Condition': ['equal'], 'MeasureCode': ['equal'], 'MeasureName': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Stateavg': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[0.06555581092834473] Load Data execution time: 0.05867791175842285\n",
+      "INFO:profiler.utility:[0.06623291969299316] Load Data execution time: 0.05917787551879883\n",
       "\n"
      ]
     }
@@ -107,9 +107,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.11428689956665039] Load Embedding start\n",
+      "INFO:profiler.utility:[0.11103606224060059] Load Embedding start\n",
       "\n",
-      "INFO:profiler.utility:[0.1489090919494629] Load Embedding execution time: 0.0346221923828125\n",
+      "INFO:profiler.utility:[0.14326214790344238] Load Embedding execution time: 0.0322260856628418\n",
       "\n"
      ]
     }
@@ -127,16 +127,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.1545698642730713] Create Training Data start\n",
+      "INFO:profiler.utility:[0.14936590194702148] Create Training Data start\n",
       "\n",
       "INFO:profiler.transformer:needs multiplier = 54 to bound the error in inv cov estimation <= 0.10000000\n",
       "INFO:profiler.transformer:use multiplier = 54, and the bound is 0.00024939\n",
       "INFO:profiler.transformer:Draw Pairs\n",
-      "100%|██████████| 19/19 [00:00<00:00, 250.90it/s]\n",
+      "100%|██████████| 19/19 [00:00<00:00, 247.44it/s]\n",
       "INFO:profiler.transformer:Number of training samples: 56943\n",
       "INFO:profiler.transformer:Computing Differences\n",
       "INFO:profiler.transformer:estimated missing data probability in training data is 0.0283\n",
-      "INFO:profiler.utility:[0.6097888946533203] Create Training Data execution time: 0.455219030380249\n",
+      "INFO:profiler.utility:[0.6679620742797852] Create Training Data execution time: 0.5185961723327637\n",
       "\n"
      ]
     }
@@ -147,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.6170806884765625] Learn Structure start\n",
+      "INFO:profiler.utility:[0.675926923751831] Learn Structure start\n",
       "\n",
       "INFO:profiler.learner:use threshold 0.0829\n"
      ]
@@ -231,104 +231,66 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[3]forget:frozenset()\n",
-      "--[4]forget:frozenset({0})\n",
-      "----[5]forget:frozenset({0, 1})\n",
-      "------[6]forget:frozenset({0, 1, 2})\n",
-      "--------[7]forget:frozenset({0, 1, 2, 3})\n",
-      "----------[8]forget:frozenset({0, 1, 2, 3, 6})\n",
-      "------------[9]forget:frozenset({0, 1, 2, 3, 6, 7})\n",
-      "--------------[0]join:frozenset({0, 1, 2, 3, 6, 7, 9})\n",
-      "----------------[10]introduce:frozenset({0, 1, 2, 3, 6, 7, 9})\n",
-      "------------------[11]forget:frozenset({0, 1, 2, 3, 6, 7})\n",
-      "--------------------[1]introduce:frozenset({0, 1, 2, 3, 5, 6, 7})\n",
-      "----------------------[12]introduce:frozenset({1, 2, 3, 5, 6, 7})\n",
-      "------------------------[13]introduce:frozenset({2, 3, 5, 6, 7})\n",
-      "--------------------------[14]introduce:frozenset({3, 5, 6, 7})\n",
-      "----------------------------[15]introduce:frozenset({5, 6, 7})\n",
-      "------------------------------[16]introduce:frozenset({6, 7})\n",
-      "--------------------------------[17]leaf:frozenset({7})\n",
-      "----------------[18]introduce:frozenset({0, 1, 2, 3, 6, 7, 9})\n",
-      "------------------[19]introduce:frozenset({1, 2, 3, 6, 7, 9})\n",
-      "--------------------[20]introduce:frozenset({1, 3, 6, 7, 9})\n",
-      "----------------------[21]introduce:frozenset({1, 9, 6, 7})\n",
-      "------------------------[22]introduce:frozenset({1, 9, 7})\n",
-      "--------------------------[23]introduce:frozenset({1, 9})\n",
-      "----------------------------[24]forget:frozenset({1})\n",
-      "------------------------------[2]introduce:frozenset({1, 10})\n",
-      "--------------------------------[25]leaf:frozenset({10})\n"
+      "DEBUG:profiler.learner:check node t = 3 with X(t) = frozenset() \n",
+      "DEBUG:profiler.learner:check node t = 4 with X(t) = frozenset({1}) \n",
+      "DEBUG:profiler.learner:check node t = 2 with X(t) = frozenset({1, 10}) \n",
+      "DEBUG:profiler.learner:check node t = 5 with X(t) = frozenset({1}) \n",
+      "DEBUG:profiler.learner:check node t = 6 with X(t) = frozenset({0, 1}) \n",
+      "DEBUG:profiler.learner:check node t = 7 with X(t) = frozenset({0, 1, 2}) \n",
+      "DEBUG:profiler.learner:check node t = 8 with X(t) = frozenset({0, 1, 2, 3}) \n",
+      "DEBUG:profiler.learner:check node t = 9 with X(t) = frozenset({0, 1, 2, 3, 6}) \n",
+      "DEBUG:profiler.learner:check node t = 10 with X(t) = frozenset({0, 1, 2, 3, 6, 7}) \n",
+      "DEBUG:profiler.learner:check node t = 0 with X(t) = frozenset({0, 1, 2, 3, 6, 7, 9}) \n",
+      "DEBUG:profiler.learner:check node t = 11 with X(t) = frozenset({0, 1, 2, 3, 6, 7}) \n",
+      "DEBUG:profiler.learner:check node t = 1 with X(t) = frozenset({0, 1, 2, 3, 5, 6, 7}) \n",
+      "DEBUG:profiler.learner:check node t = 12 with X(t) = frozenset({1, 2, 3, 5, 6, 7}) \n",
+      "DEBUG:profiler.learner:check node t = 13 with X(t) = frozenset({2, 3, 5, 6, 7}) \n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x600 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "frozenset({11, 12, 13})\n"
+      "[3]forget:frozenset()\n",
+      "--[4]forget:frozenset({1})\n",
+      "----[2]introduce:frozenset({1, 10})\n",
+      "------[5]forget:frozenset({1})\n",
+      "--------[6]forget:frozenset({0, 1})\n",
+      "----------[7]forget:frozenset({0, 1, 2})\n",
+      "------------[8]forget:frozenset({0, 1, 2, 3})\n",
+      "--------------[9]forget:frozenset({0, 1, 2, 3, 6})\n",
+      "----------------[10]forget:frozenset({0, 1, 2, 3, 6, 7})\n",
+      "------------------[0]introduce:frozenset({0, 1, 2, 3, 6, 7, 9})\n",
+      "--------------------[11]forget:frozenset({0, 1, 2, 3, 6, 7})\n",
+      "----------------------[1]introduce:frozenset({0, 1, 2, 3, 5, 6, 7})\n",
+      "------------------------[12]introduce:frozenset({1, 2, 3, 5, 6, 7})\n",
+      "--------------------------[13]introduce:frozenset({2, 3, 5, 6, 7})\n",
+      "----------------------------[14]introduce:frozenset({3, 5, 6, 7})\n",
+      "------------------------------[15]introduce:frozenset({5, 6, 7})\n",
+      "--------------------------------[16]introduce:frozenset({6, 7})\n",
+      "----------------------------------[17]leaf:frozenset({7})\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x600 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1200x600 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[1.7461059093475342] Learn Structure execution time: 1.1290252208709717\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2]forget:frozenset()\n",
-      "--[3]forget:frozenset({16})\n",
-      "----[4]forget:frozenset({16, 12})\n",
-      "------[0]introduce:frozenset({16, 12, 13})\n",
-      "--------[5]forget:frozenset({12, 13})\n",
-      "----------[1]introduce:frozenset({11, 12, 13})\n",
-      "------------[6]introduce:frozenset({12, 13})\n",
-      "--------------[7]leaf:frozenset({13})\n"
+      "DEBUG:profiler.learner:check node t = 14 with X(t) = frozenset({3, 5, 6, 7}) \n",
+      "DEBUG:profiler.learner:check node t = 15 with X(t) = frozenset({5, 6, 7}) \n",
+      "DEBUG:profiler.learner:check node t = 16 with X(t) = frozenset({6, 7}) \n",
+      "DEBUG:profiler.learner:R for leaf node t = 17 with X(t) = frozenset({7}) candidate size: 128\n",
+      "DEBUG:profiler.learner:[({7: {0}}, {}, 0), ({7: {1}}, {}, 0), ({7: {2}}, {}, 0), ({7: {3}}, {}, 0), ({7: {5}}, {}, 0), ({7: {6}}, {}, 0), ({7: {9}}, {}, 0), ({7: {0, 1}}, {}, 0), ({7: {0, 2}}, {}, 0), ({7: {0, 3}}, {}, 0), ({7: {0, 5}}, {}, 0), ({7: {0, 6}}, {}, 0), ({7: {0, 9}}, {}, 0), ({7: {1, 2}}, {}, 0), ({7: {1, 3}}, {}, 0), ({7: {1, 5}}, {}, 0), ({7: {1, 6}}, {}, 0), ({7: {1, 9}}, {}, 0), ({7: {2, 3}}, {}, 0), ({7: {2, 5}}, {}, 0), ({7: {2, 6}}, {}, 0), ({7: {9, 2}}, {}, 0), ({7: {3, 5}}, {}, 0), ({7: {3, 6}}, {}, 0), ({7: {9, 3}}, {}, 0), ({7: {5, 6}}, {}, 0), ({7: {9, 5}}, {}, 0), ({7: {9, 6}}, {}, 0), ({7: {0, 1, 2}}, {}, 0), ({7: {0, 1, 3}}, {}, 0), ({7: {0, 1, 5}}, {}, 0), ({7: {0, 1, 6}}, {}, 0), ({7: {0, 1, 9}}, {}, 0), ({7: {0, 2, 3}}, {}, 0), ({7: {0, 2, 5}}, {}, 0), ({7: {0, 2, 6}}, {}, 0), ({7: {0, 9, 2}}, {}, 0), ({7: {0, 3, 5}}, {}, 0), ({7: {0, 3, 6}}, {}, 0), ({7: {0, 9, 3}}, {}, 0), ({7: {0, 5, 6}}, {}, 0), ({7: {0, 9, 5}}, {}, 0), ({7: {0, 9, 6}}, {}, 0), ({7: {1, 2, 3}}, {}, 0), ({7: {1, 2, 5}}, {}, 0), ({7: {1, 2, 6}}, {}, 0), ({7: {1, 2, 9}}, {}, 0), ({7: {1, 3, 5}}, {}, 0), ({7: {1, 3, 6}}, {}, 0), ({7: {1, 3, 9}}, {}, 0), ({7: {1, 5, 6}}, {}, 0), ({7: {1, 5, 9}}, {}, 0), ({7: {1, 6, 9}}, {}, 0), ({7: {2, 3, 5}}, {}, 0), ({7: {2, 3, 6}}, {}, 0), ({7: {9, 2, 3}}, {}, 0), ({7: {2, 5, 6}}, {}, 0), ({7: {9, 2, 5}}, {}, 0), ({7: {9, 2, 6}}, {}, 0), ({7: {3, 5, 6}}, {}, 0), ({7: {9, 3, 5}}, {}, 0), ({7: {9, 3, 6}}, {}, 0), ({7: {9, 5, 6}}, {}, 0), ({7: {0, 1, 2, 3}}, {}, 0), ({7: {0, 1, 2, 5}}, {}, 0), ({7: {0, 1, 2, 6}}, {}, 0), ({7: {0, 1, 2, 9}}, {}, 0), ({7: {0, 1, 3, 5}}, {}, 0), ({7: {0, 1, 3, 6}}, {}, 0), ({7: {0, 1, 3, 9}}, {}, 0), ({7: {0, 1, 5, 6}}, {}, 0), ({7: {0, 1, 5, 9}}, {}, 0), ({7: {0, 1, 6, 9}}, {}, 0), ({7: {0, 2, 3, 5}}, {}, 0), ({7: {0, 2, 3, 6}}, {}, 0), ({7: {0, 9, 2, 3}}, {}, 0), ({7: {0, 2, 5, 6}}, {}, 0), ({7: {0, 9, 2, 5}}, {}, 0), ({7: {0, 9, 2, 6}}, {}, 0), ({7: {0, 3, 5, 6}}, {}, 0), ({7: {0, 9, 3, 5}}, {}, 0), ({7: {0, 9, 3, 6}}, {}, 0), ({7: {0, 9, 5, 6}}, {}, 0), ({7: {1, 2, 3, 5}}, {}, 0), ({7: {1, 2, 3, 6}}, {}, 0), ({7: {1, 2, 3, 9}}, {}, 0), ({7: {1, 2, 5, 6}}, {}, 0), ({7: {1, 2, 5, 9}}, {}, 0), ({7: {1, 2, 6, 9}}, {}, 0), ({7: {1, 3, 5, 6}}, {}, 0), ({7: {1, 3, 5, 9}}, {}, 0), ({7: {1, 3, 6, 9}}, {}, 0), ({7: {1, 5, 6, 9}}, {}, 0), ({7: {2, 3, 5, 6}}, {}, 0), ({7: {9, 2, 3, 5}}, {}, 0), ({7: {9, 2, 3, 6}}, {}, 0), ({7: {9, 2, 5, 6}}, {}, 0), ({7: {9, 3, 5, 6}}, {}, 0), ({7: {0, 1, 2, 3, 5}}, {}, 0), ({7: {0, 1, 2, 3, 6}}, {}, 0), ({7: {0, 1, 2, 3, 9}}, {}, 0), ({7: {0, 1, 2, 5, 6}}, {}, 0), ({7: {0, 1, 2, 5, 9}}, {}, 0), ({7: {0, 1, 2, 6, 9}}, {}, 0), ({7: {0, 1, 3, 5, 6}}, {}, 0), ({7: {0, 1, 3, 5, 9}}, {}, 0), ({7: {0, 1, 3, 6, 9}}, {}, 0), ({7: {0, 1, 5, 6, 9}}, {}, 0), ({7: {0, 2, 3, 5, 6}}, {}, 0), ({7: {0, 2, 3, 5, 9}}, {}, 0), ({7: {0, 2, 3, 6, 9}}, {}, 0), ({7: {0, 2, 5, 6, 9}}, {}, 0), ({7: {0, 3, 5, 6, 9}}, {}, 0), ({7: {1, 2, 3, 5, 6}}, {}, 0), ({7: {1, 2, 3, 5, 9}}, {}, 0), ({7: {1, 2, 3, 6, 9}}, {}, 0), ({7: {1, 2, 5, 6, 9}}, {}, 0), ({7: {1, 3, 5, 6, 9}}, {}, 0), ({7: {2, 3, 5, 6, 9}}, {}, 0), ({7: {0, 1, 2, 3, 5, 6}}, {}, 0), ({7: {0, 1, 2, 3, 5, 9}}, {}, 0), ({7: {0, 1, 2, 3, 6, 9}}, {}, 0), ({7: {0, 1, 2, 5, 6, 9}}, {}, 0), ({7: {0, 1, 3, 5, 6, 9}}, {}, 0), ({7: {0, 2, 3, 5, 6, 9}}, {}, 0), ({7: {1, 2, 3, 5, 6, 9}}, {}, 0), ({7: {0, 1, 2, 3, 5, 6, 9}}, {}, 0), ({7: set()}, {}, 0)]\n",
+      "DEBUG:profiler.learner:R for intro node t = 16 with X(t) = frozenset({6, 7}) candidate size: 12288\n",
+      "DEBUG:profiler.learner:R for intro node t = 15 with X(t) = frozenset({5, 6, 7}) candidate size: 409600\n"
      ]
     }
    ],
    "source": [
     "NTDs = pf.session.learn_structure(sparsity=0.05)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
