--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.007055044174194336] Load Data start\n",
+      "INFO:profiler.utility:[0.007904052734375] Load Data start\n",
       "\n",
       "INFO:profiler.dataset:inferred types of attributes: {\n",
       "    \"ProviderNumber\": \"text\",\n",
@@ -53,7 +53,7 @@
       "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
       "INFO:profiler.dataset:inferred operators of attributes: {'ProviderNumber': ['equal'], 'HospitalName': ['equal'], 'Address1': ['equal'], 'Address2': ['equal'], 'Address3': ['equal'], 'City': ['equal'], 'State': ['equal'], 'ZipCode': ['equal'], 'CountyName': ['equal'], 'PhoneNumber': ['equal'], 'HospitalType': ['equal'], 'HospitalOwner': ['equal'], 'EmergencyService': ['equal'], 'Condition': ['equal'], 'MeasureCode': ['equal'], 'MeasureName': ['equal'], 'Score': ['equal'], 'Sample': ['equal'], 'Stateavg': ['equal']}\n",
       "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[0.06623291969299316] Load Data execution time: 0.05917787551879883\n",
+      "INFO:profiler.utility:[0.09682798385620117] Load Data execution time: 0.08892393112182617\n",
       "\n"
      ]
     }
@@ -107,9 +107,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.11103606224060059] Load Embedding start\n",
+      "INFO:profiler.utility:[0.14864611625671387] Load Embedding start\n",
       "\n",
-      "INFO:profiler.utility:[0.14326214790344238] Load Embedding execution time: 0.0322260856628418\n",
+      "INFO:profiler.utility:[0.21284985542297363] Load Embedding execution time: 0.06420373916625977\n",
       "\n"
      ]
     }
@@ -127,16 +127,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.14936590194702148] Create Training Data start\n",
+      "INFO:profiler.utility:[0.21873784065246582] Create Training Data start\n",
       "\n",
       "INFO:profiler.transformer:needs multiplier = 54 to bound the error in inv cov estimation <= 0.10000000\n",
       "INFO:profiler.transformer:use multiplier = 54, and the bound is 0.00024939\n",
       "INFO:profiler.transformer:Draw Pairs\n",
-      "100%|██████████| 19/19 [00:00<00:00, 247.44it/s]\n",
+      "100%|██████████| 19/19 [00:00<00:00, 234.84it/s]\n",
       "INFO:profiler.transformer:Number of training samples: 56943\n",
       "INFO:profiler.transformer:Computing Differences\n",
       "INFO:profiler.transformer:estimated missing data probability in training data is 0.0283\n",
-      "INFO:profiler.utility:[0.6679620742797852] Create Training Data execution time: 0.5185961723327637\n",
+      "INFO:profiler.utility:[0.7331042289733887] Create Training Data execution time: 0.5143663883209229\n",
       "\n"
      ]
     }
@@ -154,7 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.675926923751831] Learn Structure start\n",
+      "INFO:profiler.utility:[0.7399101257324219] Learn Structure start\n",
       "\n",
       "INFO:profiler.learner:use threshold 0.0829\n"
      ]
@@ -162,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "<Figure size 1000x800 with 2 Axes>"
+       "<matplotlib.figure.Figure at 0x11bbd9160>"
       ]
      },
      "metadata": {},
@@ -183,22 +183,100 @@
       "MeasureCode_eq,MeasureName_eq -> Condition_eq\n",
       "Condition_eq,MeasureName_eq,Stateavg_eq -> MeasureCode_eq\n",
       "Condition_eq,MeasureCode_eq,Stateavg_eq -> MeasureName_eq\n",
-      "MeasureCode_eq,MeasureName_eq -> Stateavg_eq\n"
+      "MeasureCode_eq,MeasureName_eq -> Stateavg_eq\n",
+      "{0: 'ProviderNumber_eq', 1: 'HospitalName_eq', 2: 'Address1_eq', 3: 'City_eq', 4: 'State_eq', 5: 'ZipCode_eq', 6: 'CountyName_eq', 7: 'PhoneNumber_eq', 8: 'HospitalType_eq', 9: 'HospitalOwner_eq', 10: 'EmergencyService_eq', 11: 'Condition_eq', 12: 'MeasureCode_eq', 13: 'MeasureName_eq', 14: 'Score_eq', 15: 'Sample_eq', 16: 'Stateavg_eq'}\n",
+      "     0    1    2    3   4    5    6    7   8    9    10   11   12   13  14  \\\n",
+      "0   NaN  1.0  1.0  1.0 NaN  1.0  1.0  1.0 NaN  1.0  NaN  NaN  NaN  NaN NaN   \n",
+      "1   1.0  NaN  1.0  1.0 NaN  1.0  1.0  1.0 NaN  1.0  1.0  NaN  NaN  NaN NaN   \n",
+      "2   1.0  1.0  NaN  1.0 NaN  1.0  1.0  1.0 NaN  1.0  NaN  NaN  NaN  NaN NaN   \n",
+      "3   1.0  1.0  1.0  NaN NaN  1.0  1.0  1.0 NaN  1.0  NaN  NaN  NaN  NaN NaN   \n",
+      "4   NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN  NaN  NaN NaN   \n",
+      "5   1.0  1.0  1.0  1.0 NaN  NaN  1.0  1.0 NaN  NaN  NaN  NaN  NaN  NaN NaN   \n",
+      "6   1.0  1.0  1.0  1.0 NaN  1.0  NaN  1.0 NaN  1.0  NaN  NaN  NaN  NaN NaN   \n",
+      "7   1.0  1.0  1.0  1.0 NaN  1.0  1.0  NaN NaN  1.0  NaN  NaN  NaN  NaN NaN   \n",
+      "8   NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN  NaN  NaN NaN   \n",
+      "9   1.0  1.0  1.0  1.0 NaN  NaN  1.0  1.0 NaN  NaN  NaN  NaN  NaN  NaN NaN   \n",
+      "10  NaN  1.0  NaN  NaN NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN  NaN  NaN NaN   \n",
+      "11  NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN  1.0  1.0 NaN   \n",
+      "12  NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN NaN  NaN  NaN  1.0  NaN  1.0 NaN   \n",
+      "13  NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN NaN  NaN  NaN  1.0  1.0  NaN NaN   \n",
+      "14  NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN  NaN  NaN NaN   \n",
+      "15  NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN  NaN  NaN NaN   \n",
+      "16  NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN NaN  NaN  NaN  NaN  1.0  1.0 NaN   \n",
+      "\n",
+      "    15   16  \n",
+      "0  NaN  NaN  \n",
+      "1  NaN  NaN  \n",
+      "2  NaN  NaN  \n",
+      "3  NaN  NaN  \n",
+      "4  NaN  NaN  \n",
+      "5  NaN  NaN  \n",
+      "6  NaN  NaN  \n",
+      "7  NaN  NaN  \n",
+      "8  NaN  NaN  \n",
+      "9  NaN  NaN  \n",
+      "10 NaN  NaN  \n",
+      "11 NaN  NaN  \n",
+      "12 NaN  1.0  \n",
+      "13 NaN  1.0  \n",
+      "14 NaN  NaN  \n",
+      "15 NaN  NaN  \n",
+      "16 NaN  NaN  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/networkx/drawing/nx_pylab.py:126: MatplotlibDeprecationWarning: pyplot.hold is deprecated.\n",
+      "    Future behavior will be consistent with the long-time default:\n",
+      "    plot commands add elements without first clearing the\n",
+      "    Axes and/or Figure.\n",
+      "  b = plt.ishold()\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/networkx/drawing/nx_pylab.py:138: MatplotlibDeprecationWarning: pyplot.hold is deprecated.\n",
+      "    Future behavior will be consistent with the long-time default:\n",
+      "    plot commands add elements without first clearing the\n",
+      "    Axes and/or Figure.\n",
+      "  plt.hold(b)\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/matplotlib/__init__.py:917: UserWarning: axes.hold is deprecated. Please remove it from your matplotlibrc and/or style files.\n",
+      "  warnings.warn(self.msg_depr_set % key)\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/matplotlib/rcsetup.py:152: UserWarning: axes.hold is deprecated, will be removed in 3.0\n",
+      "  warnings.warn(\"axes.hold is deprecated, will be removed in 3.0\")\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<Figure size 1200x600 with 1 Axes>"
+       "<matplotlib.figure.Figure at 0x11c3d17f0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/networkx/drawing/nx_pylab.py:126: MatplotlibDeprecationWarning: pyplot.hold is deprecated.\n",
+      "    Future behavior will be consistent with the long-time default:\n",
+      "    plot commands add elements without first clearing the\n",
+      "    Axes and/or Figure.\n",
+      "  b = plt.ishold()\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/networkx/drawing/nx_pylab.py:138: MatplotlibDeprecationWarning: pyplot.hold is deprecated.\n",
+      "    Future behavior will be consistent with the long-time default:\n",
+      "    plot commands add elements without first clearing the\n",
+      "    Axes and/or Figure.\n",
+      "  plt.hold(b)\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/matplotlib/__init__.py:917: UserWarning: axes.hold is deprecated. Please remove it from your matplotlibrc and/or style files.\n",
+      "  warnings.warn(self.msg_depr_set % key)\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/matplotlib/rcsetup.py:152: UserWarning: axes.hold is deprecated, will be removed in 3.0\n",
+      "  warnings.warn(\"axes.hold is deprecated, will be removed in 3.0\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Figure size 1200x600 with 1 Axes>"
+       "<matplotlib.figure.Figure at 0x11c100390>"
       ]
      },
      "metadata": {},
@@ -213,22 +291,70 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/networkx/drawing/nx_pylab.py:126: MatplotlibDeprecationWarning: pyplot.hold is deprecated.\n",
+      "    Future behavior will be consistent with the long-time default:\n",
+      "    plot commands add elements without first clearing the\n",
+      "    Axes and/or Figure.\n",
+      "  b = plt.ishold()\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/networkx/drawing/nx_pylab.py:138: MatplotlibDeprecationWarning: pyplot.hold is deprecated.\n",
+      "    Future behavior will be consistent with the long-time default:\n",
+      "    plot commands add elements without first clearing the\n",
+      "    Axes and/or Figure.\n",
+      "  plt.hold(b)\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/matplotlib/__init__.py:917: UserWarning: axes.hold is deprecated. Please remove it from your matplotlibrc and/or style files.\n",
+      "  warnings.warn(self.msg_depr_set % key)\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/matplotlib/rcsetup.py:152: UserWarning: axes.hold is deprecated, will be removed in 3.0\n",
+      "  warnings.warn(\"axes.hold is deprecated, will be removed in 3.0\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Figure size 1200x600 with 1 Axes>"
+       "<matplotlib.figure.Figure at 0x11de72390>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/networkx/drawing/nx_pylab.py:126: MatplotlibDeprecationWarning: pyplot.hold is deprecated.\n",
+      "    Future behavior will be consistent with the long-time default:\n",
+      "    plot commands add elements without first clearing the\n",
+      "    Axes and/or Figure.\n",
+      "  b = plt.ishold()\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/networkx/drawing/nx_pylab.py:138: MatplotlibDeprecationWarning: pyplot.hold is deprecated.\n",
+      "    Future behavior will be consistent with the long-time default:\n",
+      "    plot commands add elements without first clearing the\n",
+      "    Axes and/or Figure.\n",
+      "  plt.hold(b)\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/matplotlib/__init__.py:917: UserWarning: axes.hold is deprecated. Please remove it from your matplotlibrc and/or style files.\n",
+      "  warnings.warn(self.msg_depr_set % key)\n",
+      "/Users/zhihan/anaconda3/envs/fd3/lib/python3.6/site-packages/matplotlib/rcsetup.py:152: UserWarning: axes.hold is deprecated, will be removed in 3.0\n",
+      "  warnings.warn(\"axes.hold is deprecated, will be removed in 3.0\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Figure size 1200x600 with 1 Axes>"
+       "<matplotlib.figure.Figure at 0x11c1b1668>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3]forget:frozenset()\n",
+      "--[4]forget:frozenset({1})"
+     ]
     },
     {
      "name": "stderr",
@@ -247,15 +373,18 @@
       "DEBUG:profiler.learner:check node t = 11 with X(t) = frozenset({0, 1, 2, 3, 6, 7}) \n",
       "DEBUG:profiler.learner:check node t = 1 with X(t) = frozenset({0, 1, 2, 3, 5, 6, 7}) \n",
       "DEBUG:profiler.learner:check node t = 12 with X(t) = frozenset({1, 2, 3, 5, 6, 7}) \n",
-      "DEBUG:profiler.learner:check node t = 13 with X(t) = frozenset({2, 3, 5, 6, 7}) \n"
+      "DEBUG:profiler.learner:check node t = 13 with X(t) = frozenset({2, 3, 5, 6, 7}) \n",
+      "DEBUG:profiler.learner:check node t = 14 with X(t) = frozenset({3, 5, 6, 7}) \n",
+      "DEBUG:profiler.learner:check node t = 15 with X(t) = frozenset({5, 6, 7}) \n",
+      "DEBUG:profiler.learner:check node t = 16 with X(t) = frozenset({6, 7}) \n",
+      "DEBUG:profiler.learner:R for leaf node t = 17 with X(t) = frozenset({7}) candidate size: 128\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3]forget:frozenset()\n",
-      "--[4]forget:frozenset({1})\n",
+      "\n",
       "----[2]introduce:frozenset({1, 10})\n",
       "------[5]forget:frozenset({1})\n",
       "--------[6]forget:frozenset({0, 1})\n",
@@ -278,11 +407,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:profiler.learner:check node t = 14 with X(t) = frozenset({3, 5, 6, 7}) \n",
-      "DEBUG:profiler.learner:check node t = 15 with X(t) = frozenset({5, 6, 7}) \n",
-      "DEBUG:profiler.learner:check node t = 16 with X(t) = frozenset({6, 7}) \n",
-      "DEBUG:profiler.learner:R for leaf node t = 17 with X(t) = frozenset({7}) candidate size: 128\n",
-      "DEBUG:profiler.learner:[({7: {0}}, {}, 0), ({7: {1}}, {}, 0), ({7: {2}}, {}, 0), ({7: {3}}, {}, 0), ({7: {5}}, {}, 0), ({7: {6}}, {}, 0), ({7: {9}}, {}, 0), ({7: {0, 1}}, {}, 0), ({7: {0, 2}}, {}, 0), ({7: {0, 3}}, {}, 0), ({7: {0, 5}}, {}, 0), ({7: {0, 6}}, {}, 0), ({7: {0, 9}}, {}, 0), ({7: {1, 2}}, {}, 0), ({7: {1, 3}}, {}, 0), ({7: {1, 5}}, {}, 0), ({7: {1, 6}}, {}, 0), ({7: {1, 9}}, {}, 0), ({7: {2, 3}}, {}, 0), ({7: {2, 5}}, {}, 0), ({7: {2, 6}}, {}, 0), ({7: {9, 2}}, {}, 0), ({7: {3, 5}}, {}, 0), ({7: {3, 6}}, {}, 0), ({7: {9, 3}}, {}, 0), ({7: {5, 6}}, {}, 0), ({7: {9, 5}}, {}, 0), ({7: {9, 6}}, {}, 0), ({7: {0, 1, 2}}, {}, 0), ({7: {0, 1, 3}}, {}, 0), ({7: {0, 1, 5}}, {}, 0), ({7: {0, 1, 6}}, {}, 0), ({7: {0, 1, 9}}, {}, 0), ({7: {0, 2, 3}}, {}, 0), ({7: {0, 2, 5}}, {}, 0), ({7: {0, 2, 6}}, {}, 0), ({7: {0, 9, 2}}, {}, 0), ({7: {0, 3, 5}}, {}, 0), ({7: {0, 3, 6}}, {}, 0), ({7: {0, 9, 3}}, {}, 0), ({7: {0, 5, 6}}, {}, 0), ({7: {0, 9, 5}}, {}, 0), ({7: {0, 9, 6}}, {}, 0), ({7: {1, 2, 3}}, {}, 0), ({7: {1, 2, 5}}, {}, 0), ({7: {1, 2, 6}}, {}, 0), ({7: {1, 2, 9}}, {}, 0), ({7: {1, 3, 5}}, {}, 0), ({7: {1, 3, 6}}, {}, 0), ({7: {1, 3, 9}}, {}, 0), ({7: {1, 5, 6}}, {}, 0), ({7: {1, 5, 9}}, {}, 0), ({7: {1, 6, 9}}, {}, 0), ({7: {2, 3, 5}}, {}, 0), ({7: {2, 3, 6}}, {}, 0), ({7: {9, 2, 3}}, {}, 0), ({7: {2, 5, 6}}, {}, 0), ({7: {9, 2, 5}}, {}, 0), ({7: {9, 2, 6}}, {}, 0), ({7: {3, 5, 6}}, {}, 0), ({7: {9, 3, 5}}, {}, 0), ({7: {9, 3, 6}}, {}, 0), ({7: {9, 5, 6}}, {}, 0), ({7: {0, 1, 2, 3}}, {}, 0), ({7: {0, 1, 2, 5}}, {}, 0), ({7: {0, 1, 2, 6}}, {}, 0), ({7: {0, 1, 2, 9}}, {}, 0), ({7: {0, 1, 3, 5}}, {}, 0), ({7: {0, 1, 3, 6}}, {}, 0), ({7: {0, 1, 3, 9}}, {}, 0), ({7: {0, 1, 5, 6}}, {}, 0), ({7: {0, 1, 5, 9}}, {}, 0), ({7: {0, 1, 6, 9}}, {}, 0), ({7: {0, 2, 3, 5}}, {}, 0), ({7: {0, 2, 3, 6}}, {}, 0), ({7: {0, 9, 2, 3}}, {}, 0), ({7: {0, 2, 5, 6}}, {}, 0), ({7: {0, 9, 2, 5}}, {}, 0), ({7: {0, 9, 2, 6}}, {}, 0), ({7: {0, 3, 5, 6}}, {}, 0), ({7: {0, 9, 3, 5}}, {}, 0), ({7: {0, 9, 3, 6}}, {}, 0), ({7: {0, 9, 5, 6}}, {}, 0), ({7: {1, 2, 3, 5}}, {}, 0), ({7: {1, 2, 3, 6}}, {}, 0), ({7: {1, 2, 3, 9}}, {}, 0), ({7: {1, 2, 5, 6}}, {}, 0), ({7: {1, 2, 5, 9}}, {}, 0), ({7: {1, 2, 6, 9}}, {}, 0), ({7: {1, 3, 5, 6}}, {}, 0), ({7: {1, 3, 5, 9}}, {}, 0), ({7: {1, 3, 6, 9}}, {}, 0), ({7: {1, 5, 6, 9}}, {}, 0), ({7: {2, 3, 5, 6}}, {}, 0), ({7: {9, 2, 3, 5}}, {}, 0), ({7: {9, 2, 3, 6}}, {}, 0), ({7: {9, 2, 5, 6}}, {}, 0), ({7: {9, 3, 5, 6}}, {}, 0), ({7: {0, 1, 2, 3, 5}}, {}, 0), ({7: {0, 1, 2, 3, 6}}, {}, 0), ({7: {0, 1, 2, 3, 9}}, {}, 0), ({7: {0, 1, 2, 5, 6}}, {}, 0), ({7: {0, 1, 2, 5, 9}}, {}, 0), ({7: {0, 1, 2, 6, 9}}, {}, 0), ({7: {0, 1, 3, 5, 6}}, {}, 0), ({7: {0, 1, 3, 5, 9}}, {}, 0), ({7: {0, 1, 3, 6, 9}}, {}, 0), ({7: {0, 1, 5, 6, 9}}, {}, 0), ({7: {0, 2, 3, 5, 6}}, {}, 0), ({7: {0, 2, 3, 5, 9}}, {}, 0), ({7: {0, 2, 3, 6, 9}}, {}, 0), ({7: {0, 2, 5, 6, 9}}, {}, 0), ({7: {0, 3, 5, 6, 9}}, {}, 0), ({7: {1, 2, 3, 5, 6}}, {}, 0), ({7: {1, 2, 3, 5, 9}}, {}, 0), ({7: {1, 2, 3, 6, 9}}, {}, 0), ({7: {1, 2, 5, 6, 9}}, {}, 0), ({7: {1, 3, 5, 6, 9}}, {}, 0), ({7: {2, 3, 5, 6, 9}}, {}, 0), ({7: {0, 1, 2, 3, 5, 6}}, {}, 0), ({7: {0, 1, 2, 3, 5, 9}}, {}, 0), ({7: {0, 1, 2, 3, 6, 9}}, {}, 0), ({7: {0, 1, 2, 5, 6, 9}}, {}, 0), ({7: {0, 1, 3, 5, 6, 9}}, {}, 0), ({7: {0, 2, 3, 5, 6, 9}}, {}, 0), ({7: {1, 2, 3, 5, 6, 9}}, {}, 0), ({7: {0, 1, 2, 3, 5, 6, 9}}, {}, 0), ({7: set()}, {}, 0)]\n",
       "DEBUG:profiler.learner:R for intro node t = 16 with X(t) = frozenset({6, 7}) candidate size: 12288\n",
       "DEBUG:profiler.learner:R for intro node t = 15 with X(t) = frozenset({5, 6, 7}) candidate size: 409600\n"
      ]
