--- a/tutorials/Tutorial1_Hospital.ipynb
+++ b/tutorials/Tutorial1_Hospital.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "pf.session.load_data(name='hospital', src=FILE, fpath='data/hospital.csv', check_param=True)"
+    "pf.session.load_data(name='hospital', src=FILE, fpath='data/hospital.csv', check_param=True, na_values='empty')"
    ]
   },
   {
